# dotfiles

./: .gitconfig  .gitignore  .zshenv.home  README.md  bootstrap.bash  bootstrap.nu  bootstrap.sh  make_symlink.sh  make_zshenv_symlink.sh  makesymlink.sh
alacritty/: alacritty.yml
claude/: CLAUDE.md  mcp.json  settings.json
claude/ccstatusline/: settings.json
codex/: AGENTS.md  config.toml
direnv/: .direnvrc
docker/: config.json
gitconfig/: .gitconfig  .gitconfig.neets13  .gitconfig.nukopy  .gitignore_global
homebrew/: Brewfile
karabiner/: README.md  karabiner
karabiner/assets/complex_modifications/: 1577213781.json
karabiner/automatic_backups/: karabiner_20191225.json  karabiner_20200117.json  karabiner_20200903.json  karabiner_20211208.json  karabiner_20220212.json  karabiner_20220909.json  karabiner_20230324.json  karabiner_20230405.json
latex/: .latexmkrc
nvim/: init.lua  lazy-lock.json
nvim/lua/config/: base.lua  keymaps.lua  lazy.lua
nvim/lua/misc/: launch-test.lua
nvim/lua/plugins/: alpha.lua  auto-save.lua  auto-session.lua  barbar.lua  barbecue.lua  chowcho.lua  comment.lua  git.lua  gitsigns.lua  hlchunk.lua  hop.lua  lualine.lua  mason-lspconfig.lua  mason.lua  neo-tree.lua  theme-nightfox.lua  theme-onedark.lua  treesitter.lua  ts-autotag.lua
python/: bootstrap-pyproject.sh  pyproject.toml
spacemacs/: .#.spacemacs  .spacemacs
starship/: starship.toml
xcode/: README.md
xcode-settings/UserData/: IDETemplateMacros.plist
xcode/UserData/KeyBindings/: Default.idekeybindings
zsh/: .zshenv  .zshrc  .zshrc.keybind
