[tool.poetry]
name = "dotfile-venv-template"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
